<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RecordsFood</string>
    <string name="hint_avg">Average cost</string>
    <string name="hint_name">Name</string>
    <string name="hint_observation">Observation</string>
    <string name="hint_tel">Tel</string>
    <string name="hint_type">Type</string>
    <string name="label_about">About</string>
    <string name="label_add_restaurant">Add Restaurant</string>
    <string name="label_avg">Average cost:</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_clean">Clean</string>
    <string name="label_close">Close</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_delete">Delete</string>
    <string name="label_developer">Developer: Ricardo da Silva Souza</string>
    <string name="label_open">Open</string>
    <string name="label_register">Register</string>
    <string name="label_search">Search</string>
    <string name="label_see_restaurants">See Restaurants</string>
    <string name="label_see_restaurants_map">See restaurants on map</string>
    <string name="label_sync_data">Synchronize data</string>
    <string name="label_tel">Tel:</string>
    <string name="label_type">Type:</string>
    <string name="label_update">Update</string>
    <string name="label_version_app">Version APP: 1.0</string>
    <string name="label_your_location">Your location!</string>
    <string name="message_cancel_capture">Capture was canceled!</string>
    <string name="message_confirm_exclude">Do you really want to exclude this restaurant?</string>
    <string name="message_download_error">It was not possible synchronize data!</string>
    <string name="message_error_create_directory">"It was not possible create directory "</string>
    <string name="message_error_delete">Happened an erro when trying to delete the restaurant!</string>
    <string name="message_error_load_preview">Happened an erro when loading the preview of captured image!</string>
    <string name="message_error_register">Happened an erro when trying to register the restaurant!</string>
    <string name="message_error_sync">Happened an erro when trying to synchronize data!</string>
    <string name="message_error_update">Happened an erro when trying to update the restaurant!</string>
    <string name="message_fail_capture">It was not possible to capture image</string>
    <string name="message_no_enable_location_service">The location service must be enabled!</string>
    <string name="message_no_location_informed">The restaurant\'s location must be informed!</string>
    <string name="message_no_permissions_take_pictures">Without the permissions to use writing and reading in storage of your device and use camera feature, it is not possible to take pictures.</string>
    <string name="message_no_permissions_use_gps">Without the permissions to use gps, it is not possible to find your location.</string>
    <string name="message_no_rest">It was not possible to find restaurants!</string>
    <string name="message_not_available_gps">Google Play Services is not available! Hence, it will not be possible get your location.</string>
    <string name="message_not_camera">Your device does not support the camera feature!</string>
    <string name="message_not_current_location">Location was not captured.</string>
    <string name="message_not_implement_action">Action is not implemented.</string>
    <string name="message_obligatory_name">The restaurant\'s name is obligatory!</string>
    <string name="message_obligatory_pic">The restaurant\'s picture is obligatory!</string>
    <string name="message_obligatory_type">The restaurant\'s type is obligatory!</string>
    <string name="message_success_delete">Restaurant deleted successfully!</string>
    <string name="message_success_register">Restaurant registered successfully!</string>
    <string name="message_success_sync">Synchronized successfully!</string>
    <string name="message_success_update">Restaurant updated successfully!</string>
    <string name="message_sync_ok">App has already been synchronized!</string>
    <string name="hint_search_filters">Search for name, type or average cost...</string>
    <string name="hint_user">User</string>
    <string name="hint_password">Password</string>
    <string name="label_staying_connected">Staying Connected</string>
    <string name="label_login" translatable="false">Login</string>
    <string name="message_error_login">User or password is wrong!</string>
</resources>