<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".fragment.FieldsRestaurantFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/ivPrev"
                    android:layout_width="@dimen/previous_rest_image"
                    android:layout_height="@dimen/previous_rest_image"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_add_photo"
                    android:background="@android:color/holo_blue_dark"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.9"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tlName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name"
                            android:textColor="@color/textColorTertiary"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tlTel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etTel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_tel"
                            android:inputType="phone"
                            android:textColor="@color/textColorTertiary"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tlType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_type"
                    android:textColor="@color/textColorTertiary"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tlAvg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etAvg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_avg"
                    android:inputType="numberDecimal"
                    android:textColor="@color/textColorTertiary"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tlObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etObs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_observation"
                    android:isScrollContainer="true"
                    android:lines="10"
                    android:maxLines="5"
                    android:minLines="5"
                    android:textColor="@color/textColorTertiary"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/llCommands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:layout_marginTop="3dp"
                    android:textColor="@android:color/black"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fbAddLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_location"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/btClean"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:layout_marginTop="3dp"
                    android:text="@string/label_clean"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <fragment
                android:id="@+id/ftMap"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
